New page for Appness

--- a/whitepaper.htm
+++ b/whitepaper.htm
@@ -23,7 +23,7 @@
     <meta property="og:description" content="This free guide breaks down the most common reasons for discrepancies between Facebook analytics and popular mobile tracker statistics.">
     <meta property="og:image" content="https://s13.postimg.org/m9ofxqn9j/facebook_guide_social.png">
     <meta property="og:image:type" content="image/jpeg">
-    <meta property="og:image:width" content="600">¡¡
+    <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="215">
     
     <style media="" data-href="css/style.css">/* FONTS */
